--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,5 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Encode Sans Expanded', sans-serif;
+    font-family:  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
